[build-system]
requires = ["hatchling >= 1.26", "wheel >= 0.45.0"]
build-backend = "hatchling.build"

[project]
name = "sensirion-i2c-driver"
description = "Base Driver for Communicating With I2C Devices"

readme = "README.md"
version =  "1.0.2"
requires-python = ">=3.8,<4.0"

authors = [
    { name = "Sensirion", email = "info@sensirion.com" },
]

license = "BSD-3-Clause"
license-files = ["LICENSE"]

keywords = ["sensirion", "i2c", "driver"]

classifiers = [
    "Intended Audience :: Developers",
    "Topic :: System :: Hardware :: Hardware Drivers",
    "Topic :: Software Development :: Build Tools",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = []

[project.optional-dependencies]

docs=[

    "sphinx-rtd-theme==3.0.2",
    "sphinx==8.2.3"
]

test= [
    "flake8>=7.1.0",
    "mock~=5.2.0",
    "pytest>=8.3.5",
    "pytest-cov>=5.0.0",
    "setuptools>=73.2.0"
]

[project.urls]
Changelog = "https://github.com/Sensirion/python-i2c-driver/blob/master/CHANGELOG.rst"
Repository = "https://github.com/sensirion/python-i2c-driver"
Documentation = "https://sensirion.github.io/python-i2c-driver"

[tool.setuptools]
# see https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
packages = ["sensirion_i2c_driver"]  # name of python package
